jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: docker.io/rvbasulto/jenkins-multi-jdk:v4
          ports:
            - containerPort: 8080
            - containerPort: 50000
          volumeMounts:
            - name: jenkins-storage
              mountPath: /var/jenkins_home

        - name: dind
          image: docker:24.0-dind
          securityContext:
            privileged: true
          args:
            - "--host=tcp://0.0.0.0:2375"
            - "--host=unix:///var/run/docker.sock"
            - "--config-file=/etc/docker/daemon.json"  
          volumeMounts:
            - name: dind-storage
              mountPath: /var/lib/docker
            - name: docker-daemon-config
              mountPath: /etc/docker/daemon.json
              subPath: daemon.json

      volumes:
        - name: jenkins-storage
          persistentVolumeClaim:
            claimName: jenkins-pvc

        - name: dind-storage
          emptyDir: {}

        - name: docker-daemon-config
          configMap:
            name: dind-daemon-config
